[package]
name = "iota-ledger"
version = "0.1.0"
authors = ["microengineer <microengineer18@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.6"
log = "0.4.11"
thiserror = "1.0.20"
enum-iterator = "0.6.0"
ledger-apdu = { git = "https://github.com/Thoralf-M/ledger-rs", rev="517c94266a78782055d239d1a8bce6b62eb3cc28" }
ledger-transport-tcp = { git = "https://github.com/Thoralf-M/ledger-rs", rev="517c94266a78782055d239d1a8bce6b62eb3cc28" }
ledger-transport-hid = { git = "https://github.com/Thoralf-M/ledger-rs", rev="517c94266a78782055d239d1a8bce6b62eb3cc28" }
ledger-transport = { git = "https://github.com/Thoralf-M/ledger-rs", rev="517c94266a78782055d239d1a8bce6b62eb3cc28" }

serde = { version = "1.0", features = ["derive"] }
bech32 = "0.7.2"
trait-async = "0.1.24"
lazy_static = "1.4.0"

[dev-dependencies]
# tests
serial_test = "0.5.1"
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
#iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs",  branch="dev", features=["ed25519"] }

# CLI example
log = "0.4.11"
thiserror = "1.0.20"
enum-iterator = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["macros"] }
ed25519 = "1.0.3"
trait-async = "0.1.24"
futures = "0.3"
rand = { version = "0.8.2", features = ["small_rng"] }
lazy_static = "1.4.0"
bech32 = "0.7.2"
bip39 = "1.0.0-rc1"
slip10 = "0.4.2"
blake2 = "0.9.1"
anyhow = "1.0"
env_logger = "0.8.2"
clap = "2.33.3"


