[package]
name = "ledger-iota"
version = "0.1.0"
authors = ["microengineer <microengineer18@gmail.com>"]
edition = "2018"

[lib]
name = "ledger_iota"

[dependencies]
futures = "0.3.6"
log = "0.4.11"
thiserror = "1.0.20"
enum-iterator = "0.6.0"
ledger-apdu = { git = "https://github.com/Zondax/ledger-rs", rev="27cb6bc" }
ledger-transport-tcp = { git = "https://github.com/Zondax/ledger-rs", rev="27cb6bc" }
ledger-transport-hid = { git = "https://github.com/Zondax/ledger-rs", rev="27cb6bc" }
ledger-transport = { git = "https://github.com/Zondax/ledger-rs", rev="27cb6bc" }

serde = { version = "1.0", features = ["derive"] }
bech32 = "0.7.2"
trait-async = "0.1.24"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "0.5.1"
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" }


