[package]
name = "ledger-tests"
version = "0.1.0"
authors = ["microengineer <microengineer18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
enum-iterator = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
ledger-iota = { path = "../ledger-iota" }
 
bee-signing-ext = { git = "https://github.com/wusyong/bee-p.git", branch = "sign-ext" , version = "^0.1.0-alpha" }

bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }

iota-core = { git = "https://github.com/iotaledger/iota.rs", branch = "dev" } 

tokio = { version = "1.0.0", features = ["macros"] }
 
ed25519 = "1.0.3"
trait-async = "0.1.24"
futures = "0.3"
rand = {version = "0.8.2", features = ["small_rng"]}
lazy_static = "1.4.0"
bech32 = "0.7.2"
bip39 = "1.0.0-rc1"
slip10 = "0.4.2"
blake2 = "0.9.1"
anyhow = "1.0"
env_logger = "0.8.2"
clap = "2.33.3"
